# sentiment-arcs

./: README.md  pyproject.toml
docs-pipy/: user_manual.md
sentimentarcs-test/: novel_test-example_author.txt  novel_the-great-gatsby_f-scott-fitzgerald.txt
sentimentarcs-test/outputs/: sentimentarcs_cruxes_novel_test-example-author_vader_sma.txt  sentimentarcs_cruxes_novel_the-great-gatsby-f-scott-fitzgerald_vader_sma.csv  sentimentarcs_cruxes_novel_the-great-gatsby-f-scott-fitzgerald_vader_sma.txt  sentimentarcs_ts_novel_test-example-author_vader_sma.csv  sentimentarcs_ts_novel_test-example-author_vader_sma.txt  sentimentarcs_ts_novel_the-great-gatsby-f-scott-fitzgerald_vader_sma.csv  sentimentarcs_ts_novel_the-great-gatsby-f-scott-fitzgerald_vader_sma.txt
sentimentarcs-test/sentimentarcs_v3/: .env.example  README.md  config.yaml  pyproject.toml
sentimentarcs-test/sentimentarcs_v3/docs-pipy/: user_manual.md
sentimentarcs-test/sentimentarcs_v3/src/sentimentarcs/: crux.py  export.py  filenames.py  normalize.py  pipeline.py  plotting.py  sentiment.py  smoothing.py
sentimentarcs-test/sentimentarcs_v3/src/sentimentarcs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sentimentarcs/: cleaning.py  cli.py  crux.py  export.py  pipeline.py  segmentation.py  sentiment.py  settings.py  smoothing.py
